--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -23,7 +23,7 @@ env:
   # REPO_URL: https://github.com/openwrt/openwrt.git
   REPO_BRANCH: master
   # REPO_BRANCH: main
-  # FEEDS_CONF: feeds.conf.default
+  FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
