--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -115,6 +115,7 @@ jobs:
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt
+        cat feeds.conf.default
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
     - name: 更新feeds
