--- a/.github/workflows/Kernel by flippy and ower scripts.yml
+++ b/.github/workflows/Kernel by flippy and ower scripts.yml
@@ -37,7 +37,7 @@ jobs:
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/tsingui/kernel/releases/tag/kernel_stable
         KERNEL_REPO_URL: https://github.com/breakings/OpenWrt/releases/tag/kernel_stable
-        KERNEL_VERSION_NAME: 5.4.260_5.15.60_6.1.80_6.6.20
+        KERNEL_VERSION_NAME: 5.4.260_6.6.20
 
     - name: Upload OpenWrt Firmware to Release
       uses: ncipollo/release-action@v1
